fixing total height to be too big

--- a/src/Scenes/Home/Home.scss
+++ b/src/Scenes/Home/Home.scss
@@ -11,6 +11,7 @@ body {
   position:         relative;
   background-color: $c-background;
   font-family:      $f-main;
+  overflow: hidden;
 }
 
 a {
